--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,8 @@ ktor = "2.3.7"
 sqlDelight = "2.0.1"
 lifecycleViewmodelCompose = "2.7.0"
 material3 = "1.2.0"
+core = "1.15.0"
+material3Desktop = "1.3.1"
 
 
 [libraries]
@@ -53,6 +55,8 @@ runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref="material3" }
 jvm-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelight" }
+androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
+androidx-material3-desktop = { group = "androidx.compose.material3", name = "material3-desktop", version.ref = "material3Desktop" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
