--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ lifecycleViewmodelCompose = "2.7.0"
 material3 = "1.7.1"
 core = "1.15.0"
 material3Desktop = "1.3.1"
+voyager = "1.1.0-beta03"
 
 
 [libraries]
@@ -54,11 +55,12 @@ ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx
 native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelight" }
 runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
-androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref="material3" }
+androidx-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 jvm-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelight" }
 androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
 androidx-material3-desktop = { group = "androidx.compose.material3", name = "material3-desktop", version.ref = "material3Desktop" }
-
+voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", name = "voyager-navigation", version.ref = "voyager" }
+voyager-transition = { module = "cafe.adriel.voyager:voyager-transitions", name = "voyager-transition", version.ref = "voyager" }
 
 
 [plugins]
