--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ material3 = "1.7.1"
 core = "1.15.0"
 material3Desktop = "1.3.1"
 voyager = "1.1.0-beta03"
+uiAndroid = "1.7.7"
 
 
 [libraries]
@@ -61,6 +62,7 @@ androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
 androidx-material3-desktop = { group = "androidx.compose.material3", name = "material3-desktop", version.ref = "material3Desktop" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", name = "voyager-navigation", version.ref = "voyager" }
 voyager-transition = { module = "cafe.adriel.voyager:voyager-transitions", name = "voyager-transition", version.ref = "voyager" }
+androidx-ui-android = { group = "androidx.compose.ui", name = "ui-android", version.ref = "uiAndroid" }
 
 
 [plugins]
